--- a/impressive-contact-page.html
+++ b/impressive-contact-page.html
@@ -1,21 +1,25 @@
-# Impressive Contact Us Page
-Creating an impressive contact page is crucial to converting website visitors into potential leads. With Solodev's unique contact us page featuring Google Maps integration, you can be assured your website visitors will leave impressed. The following code can be used in your own website template with some slight modifications.
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+     
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">   
+	<link rel="stylesheet" type="text/css" href="impressive-contact-page.css">   
+	
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>   
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/common.js"></script>   
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/map.js"></script>    
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/util.js"></script>   
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/marker.js"></script>   
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/onion.js"></script> 
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/stats.js"></script>  
+	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/controls.js"></script>
+	<script type="text/javascript" src="impressive-contact-page.js"></script>
+    
+</head>
 
-## Note
-The following code requires a Google Maps API key. To register your business and receive an API key, please visit [Google Developers](https://developers.google.com/maps/documentation/embed/guide#api_key).
+<body>
 
-## Tutorial
-
-For detailed instructions, view Solodev's [Creating an Impressive Contact Us Page](https://www.solodev.com/blog/web-design/code-examples/creating-an-impressive-contact-us-page.stml) article.
-
-## Demo
-
-Check out a working example on [JSFiddle](https://jsfiddle.net/solodev/ykL8ry7b/).
-
-## HTML
-
-The form includes basic HTML markup for the form and contact details:
-```
+<!-- contact-form -->
 <div class="container">
   <div class="row">
   
@@ -71,10 +75,9 @@ The form includes basic HTML markup for the form and contact details:
   
   </div>
 </div>
-```
 
-The full width map and additional "map-overlay" is constructed with the following code:
-```
+<!-- contact-map -->
+
 <div class="container">
     <div class="map-overlay">
     <h3>Changing the digital landscape one client at a time.</h3>
@@ -92,38 +95,6 @@ The full width map and additional "map-overlay" is constructed with the followin
           &nbsp;
     </div>
 </div>
-```
 
-## CSS
-
-All necessary CSS is in impressive-contact-page.css.
-
-## JavaScript
-
-JavaScript to initialize the map is contained in impressive-contact-page.js. Insert your registered API key into the "script.src" URL found in these lines:
-```
-function loadScript() {
-	  var script = document.createElement('script');
-	  script.type = 'text/javascript';
-	  //script.src = 'http://maps.google.com/maps/api/js?sensor=false';
-	  script.src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyAvNegdMhrApxE5o7jlPEHGS-gk03rxgUc&sensor=false&callback=initialize';
-	  document.body.appendChild(script);
-	}
-```
-
-Further, adjust the coordinates of the map relative to your business.
-
-## External Includes
-
-The contact page includes the following third-party resources:
-```
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">   
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>   
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/common.js"></script>   
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/map.js"></script>    
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/util.js"></script>   
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/marker.js"></script>   
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/onion.js"></script> 
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/stats.js"></script>  
-<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/controls.js"></script>
-```
+</body>
+</html>
