--- a/impressive-contact-page.html
+++ b/impressive-contact-page.html
@@ -4,6 +4,8 @@
      
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">   
 	<link rel="stylesheet" type="text/css" href="impressive-contact-page.css">   
+  <link rel="stylesheet" type="text/css" href="https://www.solodev.com/assets/selectize/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://www.solodev.com/assets/selectize/css/selectize.default.css">
 	
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>   
 	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/common.js"></script>   
@@ -13,88 +15,111 @@
 	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/onion.js"></script> 
 	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/stats.js"></script>  
 	<script type="text/javascript" src="https://maps.googleapis.com/maps-api-v3/api/js/25/7/controls.js"></script>
+  <script type="text/javascript" src="https://www.solodev.com/assets/selectize/js/jquery.js"></script>
+  <script type="text/javascript" src="https://www.solodev.com/assets/selectize/js/selectize.js"></script>
+  <script type="text/javascript" src="https://www.solodev.com/assets/selectize/js/index.js"></script>
+
 	<script type="text/javascript" src="impressive-contact-page.js"></script>
+
     
 </head>
 
 <body>
 
+<div class="container paddingContact-container">
+   <div class="row">
+      <div class="col-md-12">
+         <h1 class="white">
+            Let's Get Started!
+         </h1>
+         <p>
+            Contact us today to discuss your next online project.
+         </p>
+      </div>
+   </div>
+</div>
+<div class="parallax texture" id="parallax-cta" style="background-image:url(https://www.solodev.com/assets/hero-slider/slide1.jpg);">
+   &nbsp;
+</div>
 <!-- contact-form -->
-<div class="container">
-  <div class="row">
-  
-    <div class="col-md-7">
-	  <div class="row">
-	    <div class="form-group col-md-12">
-	      <h1 class="white">Let's Get Started!</h1>
-	      <p>Contact us today to discuss how Big Data can help your company!</p>
-		</div>
-	  </div>
-      <div class="row">
-        <div class="form-group col-md-6 col-sm-12">
-          <input class="form-control validate[required]" placeholder="First Name" type="text" name="FirstName" id="FirstName">
-        </div>
-        <div class="form-group col-md-6 col-sm-12">
-          <input class="form-control validate[required]" placeholder="Last Name" type="text" name="LastName" id="LastName">
-        </div>
+<div class="container form">
+   <div class="row">
+      <div class="col-md-7">
+         <div class="row">
+            <div class="form-group col-md-12">
+               <h2>Tell us About Yourself</h2>
+               <p style="color: #000000">Contact us today to discuss how Big Data can help your company!</p>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-12">
+               <div class="control-group">
+                  <label>First Name</label>
+                  <input type="text" class="demo-default form-control" placeholder="First Name">
+               </div>
+               <div class="control-group">
+                  <label>Last Name</label>
+                  <input type="text" class="demo-default form-control" placeholder="Last Name">
+               </div>
+               <div class="control-group">
+                  <label>Company</label>
+                  <input type="text" class="demo-default form-control" placeholder="Company">
+               </div>
+               <div class="control-group">
+                  <label>Phone #</label>
+                  <input type="text" class="demo-default form-control" placeholder="Phone #">
+               </div>
+               <div class="control-group">
+                  <label>Email</label>
+                  <input type="text" class="demo-default form-control" placeholder="yourname@domain.com">
+               </div>
+               <div class="control-group">
+                  <label for="select-beast">I'm Interested In:</label>
+                  <select id="select-beast" class="demo-default" placeholder="Select a service...">
+                     <option value="">Select a service...</option>
+                     <option value="4">Digital Marketing</option>
+                     <option value="1">Social Media</option>
+                     <option value="3">E-Commerce</option>
+                     <option value="5">Mobile Advertising</option>
+                  </select>
+               </div>
+            </div>
+         </div>
+         <br>
+         <div class="row">
+            <div class="form-group col-md-12 text-center">
+               <input type="submit" class="btn btn-primary" value="Contact Us">
+            </div>
+         </div>
       </div>
-      <div class="row">
-        <div class="form-group col-md-6 col-sm-12">
-          <input class="form-control validate[required,custom[email]]" placeholder="Email" type="text" name="email">
-        </div>
-        <div class="form-group col-md-6 col-sm-12">
-          <input class="form-control validate[required]" placeholder="Phone" type="text" name="phone">
-        </div>
+      <div class="col-md-5 contact-right-info">
+         <h3>ORLANDO OFFICE</h3>
+         <p style="color: #000000">123 Open Door Road Suite 1200<br />
+            Orlando, FL 30030<br />
+            <a href="tel:4078981961">407.555.1961</a>
+         </p>
+         <h3>EMAIL ADDRESS</h3>
+         <a href="mailto:info@webcorpco.com">info@webcorpco.com</a>
+         <h3>SUPPORT</h3>
+         <a href="tel:8005551656">800.555.1656</a><br />
+         <a href="mailto:support@webcorpco.com">support@webcorpco.com</a>
       </div>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <textarea placeholder="Details" name="message" id="message" class="form-control validate[required]"></textarea>
-        </div>
-      </div>
-      <div class="row">
-        <div class="form-group col-md-12 text-center">
-          <input type="submit" class="btn btn-primary" value="Contact Us">
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-5 contact-right-info">
-      <h3>ORLANDO OFFICE</h3>
-
-      <p>800 N Magnolia Ave<br />
-	  Orlando, FL 32803<br />
-	  <a href="tel:4078981961">407.898.1961</a></p>
-
-      <h3>EMAIL ADDRESS</h3>
-	  <a href="mailto:info@webcorpco.com">info@webcorpco.com</a>
-
-      <h3>SUPPORT</h3>
-	  <a href="tel:8005551656">800.555.1656</a><br />
-	  <a href="mailto:support@webcorpco.com">support@webcorpco.com</a>
-    </div>
-  
-  </div>
+   </div>
 </div>
-
 <!-- contact-map -->
-
 <div class="container">
-    <div class="map-overlay">
-    <h3>Changing the digital landscape one client at a time.</h3>
-
-    <p>WebCorpCo specializes in taking your businesses data and turning it into a wide range of insights that help drive intelligent business decisions. By mining your business data, WebCorpCo can provide you with a comprehensive set of recommendations as to how to optimize your strengths and minimize your weaknesses.</p>
-
-    <p class="marginBottom40">Contact us today. Game changing insights into your business are only a click away.</p>
-    <a href="https://www.google.com/maps/place/800+N+Magnolia+Ave,+Orlando,+FL+32803/@28.5556405,-81.3775403,17z/data=!3m1!4b1!4m2!3m1!1s0x88e77af15a1459a5:0xa114b20cc1cdb19d" style="color: #d2282e;" target="_blank">Directions to WebCorpCo</a>
-  </div>
-
+   <div class="map-overlay">
+      <h3>Changing the digital landscape one client at a time.</h3>
+      <p>WebCorpCo specializes in taking your businesses data and turning it into a wide range of insights that help drive intelligent business decisions.</p>
+      <a href="https://www.google.com/maps/place/800+N+Magnolia+Ave,+Orlando,+FL+32803/@28.5556405,-81.3775403,17z/data=!3m1!4b1!4m2!3m1!1s0x88e77af15a1459a5:0xa114b20cc1cdb19d" style="color: #d2282e;" target="_blank">Directions to WebCorpCo</a>
+   </div>
 </div>
-
 <div class="map-area">
-    <div id="map-canvas" style="height: 750px; width: 100%;">
-          &nbsp;
-    </div>
+   <div id="map-canvas" style="height: 750px; width: 100%;">
+      &nbsp;
+   </div>
 </div>
+
 
 </body>
 </html>
