--- a/impressive-contact-page.html
+++ b/impressive-contact-page.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="https://www.solodev.com/assets/selectize/js/index.js"></script>
 
   <script type="text/javascript" src="impressive-contact-page.js"></script>
+  <script type="text/javascript" src="impressive-contact-page-form.js"></script>
     
 </head>
 
@@ -50,6 +51,7 @@
                <p style="color: #000000">Contact us today to discuss how Big Data can help your company!</p>
             </div>
          </div>
+		 <form name="contactForm" id="contactForm" method="POST" action="">
          <div class="row">
             <div class="col-md-12">
                <div class="control-group">
@@ -90,6 +92,8 @@
                <input type="submit" class="btn btn-primary" value="Contact Us">
             </div>
          </div>
+		 </form>
+		 <div id="submissionResult"></div>
       </div>
       <div class="col-md-5 contact-right-info">
          <h3>ORLANDO OFFICE</h3>
